--- a/index.html
+++ b/index.html
@@ -54,36 +54,38 @@
   </nav><br><br><br>
 
 
-    <h1 style="font-size:32px;">欢迎来到<br>Acai<br>的空间</h1><br>
+    <h1 style="font-size:32px;">欢迎来到<br>Acai<br>的空间</h1>
     <div class="container">
-       <div class="media">
-        <div class="media-left mr-5 mt-3">
-          <img src="照片\照片.jpg" class="media-object" height="320" width="320"><br>
-          <p>照片,em,放错了</p>
+      <div class="container-fluid">
+        <div class="row">
+           <div class="col-sm-7 col-md-6 col-lg-5 mt-5">
+                <img class="img-responsive" src="照片\照片.jpg"><br>
+                <p>照片,em,放错了</p>
+           </div>
+         <div class="col-sm-5 col-md-6 col-lg-7">
+            <br>
+            <h2>Acai的自我介绍</h2><br><br>
+            <p>我叫蔡依珊。在北京市八一学校国际部就读高二。初中是隔壁的十九中。<br>
+              是一个简(直)简（来）单（直）单（去），简单粗暴，不会化妆，（真的）胖胖的女生。<br>
+              可能是祖传的爱操心，熟悉的人会叫我珊妈。昵称的由来是，初三操碎的闲心：）</p>
+          </div>
         </div>
-        <div class="media-body">
-          <h2>Acai的自我介绍</h2>
-          <br>
-          <p>我叫蔡依珊。在北京市八一学校国际部就读高二。初中是隔壁的十九中。<br>
-            是一个简(直)简（来）单（直）单（去），简单粗暴，不会化妆，（真的）胖胖的女生。<br>
-            可能是祖传的爱操心，熟悉的人会叫我珊妈。昵称的由来是，初三操碎的闲心：）</p>
-        </div>
-       </div>
 
-       <div class="media">
-         <div class="media-body mr-5">
+       <div class="row">
+         <div class="col-sm-5 col-md-6 col-lg-7">
            <br><br>
            <p>身高1米7整，体重emm胖就对了。从初二下好像就没长过个了，体重倒是呈指数增长。<br>
            生日是万圣节前夜的那天。天蝎女。不信妖魔鬼怪，也无宗教信仰。牙不太好,但是爱吃橡皮糖和棒棒糖!<br>
            搭这个网站的目的可能就是让更多的人认识和了解我吧。我会在这里分享我自己的成长经历和各种学习经验。</p>
          </div>
-         <div class="media-right">
-           <img src="照片\自拍.jpg" class="media-object" height="320" width="425"><br>
-           <p>照骗(微笑)</p>
+         <div class="col-sm-7 col-md-6 col-lg-5 mt-4">
+             <img class="img-responsive" src="照片\自拍.jpg"><br>
+             <p>照骗(微笑)</p>
          </div>
        </div>
-    </div>
-    <br><br><br><br><br><br>
+     </div>
+   </div>
+  <br><br><br><br>
 
 
     <!--<div id="目录">
